--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,82 @@
+@import url('https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Fira+Sans:ital,wght@0,400;0,600;0,900;1,200&family=Redressed&family=Shizuru&display=swap');
+
+* {
+  box-sizing: border-box;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Fira Sans', sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  font-style: normal;
 }
 
-a {
+/* All "Hx" tags */
+h1 {
+  font-family: 'Shizuru', cursive;
+  font-size: 3rem;
+}
+
+h2 {
+  font-family: 'Akaya Telivigala', cursive;
+  font-size: 2.5rem;
+}
+
+h3 {
+  font-family: 'Redressed', cursive;
+  font-size: 2rem;
+}
+
+h4 {
+  font-family: 'Redressed', cursive;
+  font-size: 1.75rem;
+}
+
+h5 {
+  font-family: 'Redressed', cursive;
+  font-size: 1.5rem;
+}
+
+h6 {
+  font-family: 'Redressed', cursive;
+  font-size: 1.25rem;
+}
+
+/* All 'p' tags */
+p {
+  font-style: normal;
+  font-weight: 400;
+}
+
+/* All "X" tags sons of 'p' */
+p > a {
   color: inherit;
   text-decoration: none;
+  font-style: italic;
+  font-weight: 200;
 }
 
-* {
-  box-sizing: border-box;
+p > i {
+  font-style: italic;
+  font-weight: 200;
+}
+
+p > b {
+  font-style: normal;
+  font-weight: 600;
+}
+
+p > strong {
+  font-style: normal;
+  font-weight: 900;
+}
+
+/* All 'small' tags */
+small {
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 200;
 }
